# medcontrol

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  medicamentos.py
tests/: test_medicamentos.py
