[project]
name = "medcontrol"
version = "1.0.0"
description = "Controlador de medicamentos para idosos via CLI"
authors = [{ name = "Seu Nome", email = "seu@email.com" }]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
medcontrol = "src.medicamentos:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
